# adsmt-lean-binding

./: .gitignore  Cargo.toml  LICENSE-BSD.txt  LICENSE.txt  README.md  lakefile.lean
crates/adsmt-lean-rt/: Cargo.toml
crates/adsmt-lean-rt/src/: driver.rs  lib.rs  verdict.rs
examples/runtime-smoke/: Main.lean  README.md
lake/: Adsmt.lean
lake/Adsmt/: Solver.lean  Tactic.lean  Verdict.lean
