[workspace]
resolver = "2"
members = [
    "crates/adsmt-lean-rt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# Matches the leo4 v1.0.0-rc.1 MSRV floor.
rust-version = "1.96"
license = "BSD-2-Clause OR Apache-2.0 OR LGPL-2.1-or-later"
repository = "https://github.com/newsniper-org/adsmt-lean-binding"

[workspace.dependencies]
# leo4 v1.0.0-rc.6 — local path during v0.1 skeleton work.
# RC.2 (b260ed8 + cfda354) + RC.3 (29a941f patch 3) + RC.4
# (5d786f0 patch 4) + RC.5 (4557593 / 80a918c) together close
# the typed-enum lowering loop for the reverse direction:
#   - RC.2: leo4-rust-emit (mslean4 path) — mangle → Lean type +
#           USER_TYPES schema
#   - RC.3: input side for `leo4::import!` (multi-candidate lookup)
#   - RC.4: input side for `#[leo4::export]` — user-defined idents
#           now lower to IDLType::Record { fqn: <ident>, ... }
#   - RC.5: leo4-oxilean-build + leo4-oxilean-runner (rust-
#           transpile reverse path) gets the same typed-enum
#           closure; reverse_emit tests 7 → 22, runner USER_TYPES
#           axiom synth covered end-to-end via `leo4 run`
#   - RC.6: 4 follow-ups (cbb2af9) — F1 reverse rust-transpile
#           scaffold template, F2 leo4-oxilean-runner E2E smoke
#           test (opt-in via LEO4_E2E_* env vars), F3 generic-
#           instantiation mangle tokeniser (greedy longest-match
#           against USER_TYPES FQN list), F4 runner USER_TYPES
#           Inductive/Constructor synthesis (lifts the RC.5 stub
#           axiom).
# When this repo goes public (or when leo4 cleans up its
# nested-submodule chain), swap the path lines for the
# tag-pinned git declarations below:
#
#   leo4        = { git = "https://github.com/newsniper-org/leo4.git", tag = "v1.0.0-rc.6", features = ["rust-exports"] }
#   leo4-abi    = { git = "https://github.com/newsniper-org/leo4.git", tag = "v1.0.0-rc.6" }
#   leo4-macros = { git = "https://github.com/newsniper-org/leo4.git", tag = "v1.0.0-rc.6" }
leo4        = { path = "../leo4/crates/leo4", features = ["rust-exports"] }
leo4-abi    = { path = "../leo4/crates/leo4-abi" }
leo4-macros = { path = "../leo4/crates/leo4-macros" }

# adsmt main — local path during v0.1 skeleton work.
# Published form switches these to `branch = "testing"` git
# pins (testing is the consumer-facing line until adsmt main
# cuts v1.0.0; see memory `v1_0_0_scope_expansion.md`):
#
#   adsmt-cert   = { git = "https://github.com/newsniper-org/adsmt.git", branch = "testing" }
#   adsmt-core   = { git = "https://github.com/newsniper-org/adsmt.git", branch = "testing" }
#   adsmt-engine = { git = "https://github.com/newsniper-org/adsmt.git", branch = "testing" }
#   adsmt-parser = { git = "https://github.com/newsniper-org/adsmt.git", branch = "testing" }
#   adsmt-theory = { git = "https://github.com/newsniper-org/adsmt.git", branch = "testing" }
#   adsmt-abduce = { git = "https://github.com/newsniper-org/adsmt.git", branch = "testing" }
adsmt-cert   = { path = "../AD1/adsmt-cert" }
adsmt-core   = { path = "../AD1/adsmt-core" }
adsmt-engine = { path = "../AD1/adsmt-engine" }
adsmt-parser = { path = "../AD1/adsmt-parser" }
adsmt-theory = { path = "../AD1/adsmt-theory" }
adsmt-abduce = { path = "../AD1/adsmt-abduce" }
